PGCK-156 added sonar fixes